fix landscape header image stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,12 @@ header {
     text-align: center;  /* aligns the anchor (link) that now wraps the image */
 }
 
+#headerLink {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+}
+
 #headerLogo {
     margin: 10px auto;
     width: 40%;
